Added basic editor

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -25,6 +25,10 @@
 
         <!-- Add your site or application content here -->
 
+        <div class="controls">
+          <div title="Run" id="run" class="control-button run">▶</div>
+          <div title="Debug" id="debug" class="control-button debug">🐞</div>
+        </div>
         <div class="editor-wrapper">
           <textarea id="editor"></textarea>
         </div>
