Added ability to stop at breakpoints

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -31,7 +31,7 @@
     <div title="Step" id="step" class="control-button step">➜</div>
     <div title="Run" id="run" class="control-button run">▶</div>
     <input type="number" min="0" title="Frequency"
-      value="1" class="control-input frequency"></input>
+      value="1" class="control-input frequency" id="frequency"></input>
     <div class="control-label">Hz</div>
   </div>
   <div class="editor-wrapper">
