Fixed bug when loading page for first time and added hint for examples

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -61,9 +61,12 @@
   </div>
   <div class="editor-wrapper">
     <textarea id="editor">*This is a comment
-      
+
 a:      * this is a label
-JMP a   * labels can be referenced in Jump Instructions</textarea>
+JMP a   * labels can be referenced in Jump Instructions
+
+        * Check out some examples using the ↑ button.
+</textarea>
   </div>
   <div class="display" id="display">
     <div class="simple" id="simple">
