Made the page dynamically resize

--- a/Simulator/index.html
+++ b/Simulator/index.html
@@ -59,7 +59,7 @@
     <div title="About" class="control-button about-button" id="about-open">ⓘ</div>
     <div title="Load Example" class="control-button about-button" id="load-example">↑</div>
   </div>
-  <div class="editor-wrapper">
+  <div class="editor-wrapper" id="editor-wrapper">
     <textarea id="editor">*This is a comment
 
 a:      * this is a label
